More plots and description on pca analysis

--- a/latex/appendix.tex
+++ b/latex/appendix.tex
@@ -116,57 +116,146 @@ Notizen aus "`Über Wachstum und Form"' von D'Arcy Wentworth Thompson \cite{DArc
 \chapter{Erhobene Daten für PCA}
 \label{appendix_pca}
 
+ % ------
+ % Flügel
+ % ------
  \begin{figure}
-   \subfloat[Erster Punkt des Halses]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results/input_neck1.pdf}}
+   \subfloat[Erster Punkt des Halses]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results_with_wing_tag/input_neck1.pdf}}
    \qquad
-   \subfloat[Zweiter Punkt des Halses]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results/input_neck2.pdf}}
+   \subfloat[Zweiter Punkt des Halses]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results_with_wing_tag/input_neck2.pdf}}
    \\
-   \subfloat[Dritter Punkt des Halses]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results/input_neck3.pdf}}
+   \subfloat[Dritter Punkt des Halses]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results_with_wing_tag/input_neck3.pdf}}
    \qquad
-   \subfloat[Vierter Punkt des Halses \bzw erster Punkt des Rückens]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results/input_back1.pdf}}
+   \subfloat[Vierter Punkt des Halses \bzw erster Punkt des Rückens]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results_with_wing_tag/input_back1.pdf}}
    \\
-   \subfloat[Zweiter Punkt des Rückens]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results/input_back2.pdf}}
+   \subfloat[Zweiter Punkt des Rückens]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results_with_wing_tag/input_back2.pdf}}
    \qquad
-   \subfloat[Dritter Punkt des Rückens]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results/input_back3.pdf}}
+   \subfloat[Dritter Punkt des Rückens]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results_with_wing_tag/input_back3.pdf}}
   \end{figure}
    
   \begin{figure}
    \ContinuedFloat
-   \subfloat[Vierter Punkt des Rückens \bzw erster Punkt des Schwanzes]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results/input_back4.pdf}}
+   \subfloat[Vierter Punkt des Rückens \bzw erster Punkt des Schwanzes]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results_with_wing_tag/input_back4.pdf}}
    \qquad
-   \subfloat[Zweiter Punkt des Schwanzes]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results/input_tail2.pdf}}
+   \subfloat[Zweiter Punkt des Schwanzes]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results_with_wing_tag/input_tail2.pdf}}
    \\
-   \subfloat[Dritter Punkt des Schwanzes]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results/input_tail3.pdf}}
+   \subfloat[Dritter Punkt des Schwanzes]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results_with_wing_tag/input_tail3.pdf}}
    \qquad
-   \subfloat[Vierter Punkt des Schwanzes]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results/input_tail4.pdf}}
+   \subfloat[Vierter Punkt des Schwanzes]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results_with_wing_tag/input_tail4.pdf}}
    
    \caption{Erhobene Daten: Punkte der Bézierkurven der Wirbelsäule}
-   \label{input_data_spine}
+   \label{input_data_spine_wings}
   \end{figure}
 
   \begin{figure}
-   \subfloat[Länge Ober- und Unterarm]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results/input_upper+lowerArm.pdf}}
+   \subfloat[Länge Ober- und Unterarm]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results_with_wing_tag/input_upper+lowerArm.pdf}}
    \qquad
-   \subfloat[Länge Unterarm und Hand]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results/input_lowerArm+hand.pdf}}
+   \subfloat[Länge Unterarm und Hand]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results_with_wing_tag/input_lowerArm+hand.pdf}}
    \\
-   \subfloat[Länge Ober- und Unterschenkel]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results/input_upper+lowerLeg.pdf}}
+   \subfloat[Länge Ober- und Unterschenkel]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results_with_wing_tag/input_upper+lowerLeg.pdf}}
    \qquad
-   \subfloat[Länge Unterschenkel und Fuß]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results/input_lowerLeg+foot.pdf}}
+   \subfloat[Länge Unterschenkel und Fuß]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results_with_wing_tag/input_lowerLeg+foot.pdf}}
    
    \caption{Erhobene Daten: Längen der Extremitäten. Gegeneinander sind jeweils abgetragen Ober- und Unterarm, Ober- und Unterschenkel, Unterarm und Hand, Unterschenkel und Fuß.}
-   \label{input_data_lengths}
+   \label{input_data_lengths_wings}
   \end{figure}
  
  \begin{figure}
   \centering
-  \subfloat[lineare Skala]{\includegraphics[width=0.8\textwidth]{../PCA/gnuplot/results/input_weight.pdf} \label{gnuplot_weight}}
+  \subfloat[lineare Skala]{\includegraphics[width=0.8\textwidth]{../PCA/gnuplot/results_with_wing_tag/input_weight.pdf} \label{gnuplot_weight}}
   \\
-  \subfloat[logarithmische Skala]{\includegraphics[width=0.8\textwidth]{../PCA/gnuplot/results/input_weight_logarithmic.pdf}\label{gnuplot_log_weight}}
+  \subfloat[logarithmische Skala]{\includegraphics[width=0.8\textwidth]{../PCA/gnuplot/results_with_wing_tag/input_weight_logarithmic.pdf}\label{gnuplot_log_weight}}
   
   \caption{Erhobene Daten: Gewicht}
-  \label{input_data_weight}
+  \label{input_data_weight_wings}
  \end{figure}
+ 
+ 
+ % ------
+ % Beine
+ % ------
+ 
+  \begin{figure}
+   \subfloat[Erster Punkt des Halses]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results_with_leg_tag/input_neck1.pdf}}
+   \qquad
+   \subfloat[Zweiter Punkt des Halses]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results_with_leg_tag/input_neck2.pdf}}
+   \\
+   \subfloat[Dritter Punkt des Halses]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results_with_leg_tag/input_neck3.pdf}}
+   \qquad
+   \subfloat[Vierter Punkt des Halses \bzw erster Punkt des Rückens]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results_with_leg_tag/input_back1.pdf}}
+   \\
+   \subfloat[Zweiter Punkt des Rückens]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results_with_leg_tag/input_back2.pdf}}
+   \qquad
+   \subfloat[Dritter Punkt des Rückens]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results_with_leg_tag/input_back3.pdf}}
+  \end{figure}
+   
+  \begin{figure}
+   \ContinuedFloat
+   \subfloat[Vierter Punkt des Rückens \bzw erster Punkt des Schwanzes]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results_with_leg_tag/input_back4.pdf}}
+   \qquad
+   \subfloat[Zweiter Punkt des Schwanzes]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results_with_leg_tag/input_tail2.pdf}}
+   \\
+   \subfloat[Dritter Punkt des Schwanzes]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results_with_leg_tag/input_tail3.pdf}}
+   \qquad
+   \subfloat[Vierter Punkt des Schwanzes]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results_with_leg_tag/input_tail4.pdf}}
+   
+   \caption{Erhobene Daten: Punkte der Bézierkurven der Wirbelsäule}
+   \label{input_data_spine_legs}
+  \end{figure}
 
+  \begin{figure}
+   \subfloat[Länge Ober- und Unterarm]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results_with_leg_tag/input_upper+lowerArm.pdf}}
+   \qquad
+   \subfloat[Länge Unterarm und Hand]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results_with_leg_tag/input_lowerArm+hand.pdf}}
+   \\
+   \subfloat[Länge Ober- und Unterschenkel]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results_with_leg_tag/input_upper+lowerLeg.pdf}}
+   \qquad
+   \subfloat[Länge Unterschenkel und Fuß]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results_with_leg_tag/input_lowerLeg+foot.pdf}}
+   
+   \caption{Erhobene Daten: Längen der Extremitäten. Gegeneinander sind jeweils abgetragen Ober- und Unterarm, Ober- und Unterschenkel, Unterarm und Hand, Unterschenkel und Fuß.}
+   \label{input_data_lengths_legs}
+  \end{figure}
+ 
+ 
+ %--------------
+ % Projektionen
+ % ------------
+ 
+ \begin{figure}
+  \centering
+  \subfloat[]{\includegraphics[width=0.45\textwidth]{../PCA/gnuplot_log_weight/results_with_wing_tag/projection_eigenvectors12.pdf}}
+  \qquad
+  \subfloat[]{\includegraphics[width=0.45\textwidth]{../PCA/gnuplot_log_weight/results_with_wing_tag/projection_eigenvectors13.pdf}}
+  \\
+  \subfloat[]{\includegraphics[width=0.45\textwidth]{../PCA/gnuplot_log_weight/results_with_wing_tag/projection_eigenvectors23.pdf}}
+  
+  \caption{Projektion der Eingabdaten auf die Ebene, die jeweils durch zwei der größten drei Eigenvektoren aufgespannt wird. Markiert ist jeweils ob die Datenpunkte Flügel haben oder nicht.}
+  \label{projection_wings}
+ \end{figure}
+ 
+\begin{figure}
+  \centering
+  \subfloat[]{\includegraphics[width=0.45\textwidth]{../PCA/gnuplot_log_weight/results_with_leg_tag/projection_eigenvectors12.pdf}}
+  \qquad
+  \subfloat[]{\includegraphics[width=0.45\textwidth]{../PCA/gnuplot_log_weight/results_with_leg_tag/projection_eigenvectors13.pdf}}
+  \\
+  \subfloat[]{\includegraphics[width=0.45\textwidth]{../PCA/gnuplot_log_weight/results_with_leg_tag/projection_eigenvectors23.pdf}}
+  
+  \caption{Projektion der Eingabdaten auf die Ebene, die jeweils durch zwei der größten drei Eigenvektoren aufgespannt wird. Markiert ist jeweils wieviele Beine die Datenpunkte haben.}
+  \label{projection_legs}
+ \end{figure}
+ 
+ \begin{figure}
+  \centering
+  \subfloat[]{\includegraphics[width=0.45\textwidth]{../PCA/gnuplot_log_weight/results_with_animal_class_tag/projection_eigenvectors12.pdf}}
+  \qquad
+  \subfloat[]{\includegraphics[width=0.45\textwidth]{../PCA/gnuplot_log_weight/results_with_animal_class_tag/projection_eigenvectors13.pdf}}
+  \\
+  \subfloat[]{\includegraphics[width=0.45\textwidth]{../PCA/gnuplot_log_weight/results_with_animal_class_tag/projection_eigenvectors23.pdf}}
+  
+  \caption{Projektion der Eingabdaten auf die Ebene, die jeweils durch zwei der größten drei Eigenvektoren aufgespannt wird. Markiert ist jeweils zu welcher Tierklasse die Datenpunkte gehören.}
+  \label{projection_animal_class}
+ \end{figure}
 
  
  \section{Skelettbilder}
