--- a/latex/appendix.tex
+++ b/latex/appendix.tex
@@ -132,7 +132,6 @@ Notizen aus "`Über Wachstum und Form"' von D'Arcy Wentworth Thompson \cite{DArc
    \qquad
    \subfloat[Dritter Punkt des Rückens]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results_with_wing_tag/input_back3.pdf}}
   \end{figure}
-   
   \begin{figure}
    \ContinuedFloat
    \subfloat[Vierter Punkt des Rückens \bzw erster Punkt des Schwanzes]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results_with_wing_tag/input_back4.pdf}}
@@ -143,7 +142,7 @@ Notizen aus "`Über Wachstum und Form"' von D'Arcy Wentworth Thompson \cite{DArc
    \qquad
    \subfloat[Vierter Punkt des Schwanzes]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results_with_wing_tag/input_tail4.pdf}}
    
-   \caption{Erhobene Daten: Punkte der Bézierkurven der Wirbelsäule}
+   \caption{Erhobene Daten: Punkte der Bézierkurven der Wirbelsäule. Markiert ist jeweils ob die Datenpunkte Flügel haben oder nicht.}
    \label{input_data_spine_wings}
   \end{figure}
 
@@ -156,7 +155,7 @@ Notizen aus "`Über Wachstum und Form"' von D'Arcy Wentworth Thompson \cite{DArc
    \qquad
    \subfloat[Länge Unterschenkel und Fuß]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results_with_wing_tag/input_lowerLeg+foot.pdf}}
    
-   \caption{Erhobene Daten: Längen der Extremitäten. Gegeneinander sind jeweils abgetragen Ober- und Unterarm, Ober- und Unterschenkel, Unterarm und Hand, Unterschenkel und Fuß.}
+   \caption{Erhobene Daten: Längen der Extremitäten. Gegeneinander sind jeweils abgetragen Ober- und Unterarm, Ober- und Unterschenkel, Unterarm und Hand, Unterschenkel und Fuß. Markiert ist jeweils ob die Datenpunkte Flügel haben oder nicht}
    \label{input_data_lengths_wings}
   \end{figure}
  
@@ -166,7 +165,7 @@ Notizen aus "`Über Wachstum und Form"' von D'Arcy Wentworth Thompson \cite{DArc
   \\
   \subfloat[logarithmische Skala]{\includegraphics[width=0.8\textwidth]{../PCA/gnuplot/results_with_wing_tag/input_weight_logarithmic.pdf}\label{gnuplot_log_weight}}
   
-  \caption{Erhobene Daten: Gewicht}
+  \caption{Erhobene Daten: Gewicht. Markiert ist jeweils ob die Datenpunkte Flügel haben oder nicht.}
   \label{input_data_weight_wings}
  \end{figure}
  
@@ -188,7 +187,6 @@ Notizen aus "`Über Wachstum und Form"' von D'Arcy Wentworth Thompson \cite{DArc
    \qquad
    \subfloat[Dritter Punkt des Rückens]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results_with_leg_tag/input_back3.pdf}}
   \end{figure}
-   
   \begin{figure}
    \ContinuedFloat
    \subfloat[Vierter Punkt des Rückens \bzw erster Punkt des Schwanzes]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results_with_leg_tag/input_back4.pdf}}
@@ -199,7 +197,7 @@ Notizen aus "`Über Wachstum und Form"' von D'Arcy Wentworth Thompson \cite{DArc
    \qquad
    \subfloat[Vierter Punkt des Schwanzes]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results_with_leg_tag/input_tail4.pdf}}
    
-   \caption{Erhobene Daten: Punkte der Bézierkurven der Wirbelsäule}
+   \caption{Erhobene Daten: Punkte der Bézierkurven der Wirbelsäule. Markiert ist jeweils wieviele Beine die Datenpunkte haben.}
    \label{input_data_spine_legs}
   \end{figure}
 
@@ -212,7 +210,7 @@ Notizen aus "`Über Wachstum und Form"' von D'Arcy Wentworth Thompson \cite{DArc
    \qquad
    \subfloat[Länge Unterschenkel und Fuß]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results_with_leg_tag/input_lowerLeg+foot.pdf}}
    
-   \caption{Erhobene Daten: Längen der Extremitäten. Gegeneinander sind jeweils abgetragen Ober- und Unterarm, Ober- und Unterschenkel, Unterarm und Hand, Unterschenkel und Fuß.}
+   \caption{Erhobene Daten: Längen der Extremitäten. Gegeneinander sind jeweils abgetragen Ober- und Unterarm, Ober- und Unterschenkel, Unterarm und Hand, Unterschenkel und Fuß. Markiert ist jeweils wieviele Beine die Datenpunkte haben}
    \label{input_data_lengths_legs}
   \end{figure}
  
@@ -253,7 +251,7 @@ Notizen aus "`Über Wachstum und Form"' von D'Arcy Wentworth Thompson \cite{DArc
   \\
   \subfloat[]{\includegraphics[width=0.45\textwidth]{../PCA/gnuplot_log_weight/results_with_animal_class_tag/projection_eigenvectors23.pdf}}
   
-  \caption{Projektion der Eingabdaten auf die Ebene, die jeweils durch zwei der größten drei Eigenvektoren aufgespannt wird. Markiert ist jeweils zu welcher Tierklasse die Datenpunkte gehören.}
+  \caption{Projektion der Eingabdaten auf die Ebene, die jeweils durch zwei der größten drei Eigenvektoren aufgespannt wird. Markiert ist jeweils welcher Tierklasse die Datenpunkte angehören.}
   \label{projection_animal_class}
  \end{figure}
 
