--- a/latex/pca.tex
+++ b/latex/pca.tex
@@ -120,35 +120,54 @@
  Der Punkt mit dem zweitgrößten Abstand zum Mittelwert ist der Schwan (siehe Abbildung \ref{schwan_farbig}).
  
  \begin{figure}
-  \centering
-  \includegraphics[width = 0.5\textwidth]{../PCA/Skelettbilder/Seehund_farbig.png}
-  \caption{Annotiertes Bild des Skeletts eines Seehunds. Ansonsten wurde folgendes erhoben:
-  Tierklasse: Säugetier, keine Flügel, Paare von Beinen mit Bodenkontakt: $1$, ungefähres Gewicht: $100$kg}
-  \label{seehund_farbig}
+  \subfloat[Seehund]{\includegraphics[width=0.5\textwidth]{../PCA/Skelettbilder/Seehund_farbig.png} \label{seehund_farbig}}
+  \qquad
+  \subfloat[Schwan]{\includegraphics[width=0.5\textwidth]{../PCA/Skelettbilder/Schwan_farbig.png}\label{schwan_farbig}}
+  
+  \caption{Annotierte Bild des Skeletts eines Seehunds(a) und eines Schwans(b). Zusätzlich wurde zum Seehund erhoben:
+  Tierklasse: Säugetier, keine Flügel, Paare von Beinen mit Bodenkontakt: $1$, ungefähres Gewicht: $100$k; und zum Schwan: Tierklasse: Vogel, Flügel, Paare von Beinen mit Bodenkontakt: $1$, ungefähres Gewicht: $14$kg.}
+ \end{figure}
+
+ 
+ Eine Vorraussetzung der PCA ist, dass die Eingabedaten in jeder Dimension normalverteilt sind. Es gibt die beiden Merkmale \emph{Flügel} und \emph{Beine mit Bodenkontakt}, die offensichtlich nicht normalverteilt sind, da sie diskret nur ein \bzw zwei Werte annehmen können. Hierzu weiter unten mehr. Die anderen Dimensionen wurden mithilfe eines Quantil-Quantil-Diagramms mit der Normalverteilung verglichen. \todo{QQ Diagramme erklären}
+ Die Diagramm zeigen, dass die Dimensionen alle mehr oder weniger normalverteilt sind (siehe Abbildungen \ref{qqdiagram_examples} und  im Anhang). \todo{Rest in Anhang} 
+ Für das Merkmal \emph{Gewicht} gilt dies aber nur, da es logarithmisch in die PCA eingeht. Die Verteilung der originalen Gewichte weicht sehr deutlich von einer Normalverteilung ab (siehe Abbildungen \ref{qqdiagrams_weight}).
+ Verwendet man das lineare Gewicht als Eingabe für die PCA, treten dadurch bei der Kombination von zufälligen Werten für die Eigenvektoren schnell Gewichte kleiner null auf. Dies wird bei einer logarithmischen Skala vermieden.
+ Welcher Logarithmus zur Umrechnung der Daten verwendet wird schlägt sich nur als linearer Faktor nieder. Da hier wiederum nicht ersichtlich ist welche Skalierung am besten wäre, wurde hier der Zehnerlogarithmus verwendet.
+ 
+ \begin{figure}
+  \subfloat[x-Wert der $3$. Koordinate des Halses]{\includegraphics[width=0.3\textwidth]{../PCA/gnuplot/results_qq_diagrams/QQ_diagram4.pdf}}
+  \qquad
+  \subfloat[Länge der Hand]{\includegraphics[width=0.3\textwidth]{../PCA/gnuplot/results_qq_diagrams/QQ_diagram24.pdf}}
+  \qquad
+  \subfloat[Länge des Oberschenkels]{\includegraphics[width=0.3\textwidth]{../PCA/gnuplot/results_qq_diagrams/QQ_diagram25.pdf}}
+  
+  \caption{Beispielhaft ausgewählte Quantil-Quantil-Diagramme von drei Eingabedimensionen. (a) ist weicht nicht stark von der Normalverteilung ab, (b) und (c) hingegen schon mehr.}
+  \label{qqdiagram_examples}
  \end{figure}
  
-  \begin{figure}
-  \centering
-  \includegraphics[width = 0.5\textwidth]{../PCA/Skelettbilder/Schwan_farbig.png}
-  \caption{Annotiertes Bild des Skeletts eines Schwans. Das Problem hier ist, dass sich der Hals nicht mit einer kubischen Bézierkurve darstellen lässt. Deshalb wurde er möglichst gut angenähert. Ansonsten wurde folgendes erhoben:
-  Tierklasse: Vogel, Flügel, Paare von Beinen mit Bodenkontakt: $1$, ungefähres Gewicht: $14$kg}
-  \label{schwan_farbig}
+\begin{figure}
+  \subfloat[Gewicht linear]{\includegraphics[width=0.3\textwidth]{../PCA/gnuplot/results_qq_diagrams/QQ_diagram_linear_weight.pdf}}
+  \qquad
+  \subfloat[Gewicht linear (Ausschnitt)]{\includegraphics[width=0.3\textwidth]{../PCA/gnuplot/results_qq_diagrams/QQ_diagram_linear_weight_without_diagonal.pdf}}
+  \qquad
+  \subfloat[Gewicht logarithmisch]{\includegraphics[width=0.3\textwidth]{../PCA/gnuplot/results_qq_diagrams/QQ_diagram28.pdf}}
+  
+  \caption{ Quantil-Quantil-Diagramme des Gewichts, einmal linear (a,b) und einmal mit logarithmischer Skala (b)}
+  \label{qqdiagrams_weight}
  \end{figure}
+
  
  
  Im Folgenden werden die drei diskreten Merkmale \emph{Tierklasse}, \emph{Anzahl Beine mit Bodenkontakt} und \emph{vorhandene Flügel} genauer betrachtet.
  
- Es gibt $7$ Datenpunkte mit Flügeln und $37$ ohne Flügel. In den Visualisierungen der Eingabedaten (siehe Anhang \ref{appendix_pca}, Abbildungen \ref{input_data_spine_wings}, \ref{input_data_lengths_wings} und \ref{input_data_weight_wings}) ist zu sehen, dass die Tiere mit Flügeln zwar in den einzelnen Projektionen keine Cluster bilden, aber doch meist nahe zusammen liegen. Nach der Koordinatentransformation durch die PCA ist das Cluster jedoch klar erkennbar (siehe Abbildung \ref{projection_wings} und Abschnitt \ref{section_pca_result_analysis}).
+ Es gibt $7$ Datenpunkte mit Flügeln und $37$ ohne Flügel. In den Visualisierungen der Eingabedaten (siehe Anhang \ref{appendix_pca}, Abbildungen \ref{input_data_wings} und \ref{input_data_weight_wings}) ist zu sehen, dass die Tiere mit Flügeln zwar in den einzelnen Projektionen keine Cluster bilden, aber doch meist nahe zusammen liegen. Nach der Koordinatentransformation durch die PCA ist das Cluster jedoch klar erkennbar (siehe Abbildung \ref{projection_wings} und Abschnitt \ref{section_pca_result_analysis}).
  
  Betrachtet man nun die selben Diagramme, nur annotiert mit der Tierklasse, so ergibt sich kein so klares Bild (siehe Abbildung \ref{projection_animal_class}). Gut zu erkennen ist jedoch, dass die Vögel ein Cluster bilden, nämlich das selbe wie die Datenpunkte mit Flügeln. Das liegt daran, dass in den erhobenen Daten alle Tiere Vögel sind, genau dann, wenn sie auch Flügel haben. Ansonsten lassen sich keine Cluster erkennen.
  
- Im Gegensatz dazu bildet die Aufteilung nach der Anzahl der Beine wiederum Cluster (siehe Abbildungen \ref{input_data_spine_legs}, \ref{input_data_lengths_legs} und \ref{projection_legs}).
+ Im Gegensatz dazu bildet die Aufteilung nach der Anzahl der Beine wiederum Cluster (siehe Abbildungen \ref{input_data_legs} und \ref{projection_legs}).
  
-
- Nun zum Gewicht. Das Gewicht der Eingabedaten ist nicht normalverteilt (siehe Abbildung \ref{gnuplot_weight}), aber auf einer logarithmischen Skala schon (siehe Abbildung \ref{gnuplot_log_weight}). \todo{QQ Diagramme verstehen und programmieren}
- \todo{Gewichtplots nach Größe sortieren?}
- Bei linearem Gewicht als Eingabe für die PCA treten dadurch bei der Kombination von zufälligen Werten für die Eigenvektoren schnell Gewichte kleiner null auf. Dies wird bei einer logarithmischen Skala vermieden.
- Welcher Logarithmus zur Umrechnung der Daten verwendet wird schlägt sich nur als linearer Faktor nieder. Da hier wiederum nicht ersichtlich ist welche Skalierung am besten wäre, wurde hier der Zehnerlogarithmus verwendet.
+ Skaliert man das Flügel und Beine um Faktor $1000$ kleiner, so verschwinden die Cluster (siehe Abbildung ...) \todo{Skalierung Beschreiben (auch schon in den vorherigen Abschnitten) und Abbildungen einfügen}
  
 
  %- - - - - - - - - - - - - - - - - -
