Scale points in plots and axis labels up and remove key

--- a/latex/appendix.tex
+++ b/latex/appendix.tex
@@ -150,7 +150,7 @@ Notizen aus "`Über Wachstum und Form"' von D'Arcy Wentworth Thompson \cite{DArc
    \qquad
    \subfloat[Länge Unterschenkel und Fuß]{\includegraphics[width=0.3\textwidth]{../PCA/gnuplot/results_with_wing_tag/input_lowerLeg+foot.pdf}}
    
-   \caption{Erhobene Daten: Punkte der Bézierkurven der Wirbelsäule und Längen der Extremitäten. Bei den Extremitäten ist jeweils gegeneinander abgetragen Ober- und Unterarm, Ober- und Unterschenkel, Unterarm und Hand, Unterschenkel und Fuß. Markiert ist jeweils ob die Datenpunkte Flügel haben oder nicht.}
+   \caption{Erhobene Daten: Punkte der Bézierkurven der Wirbelsäule und Längen der Extremitäten. Bei den Extremitäten ist jeweils gegeneinander abgetragen Ober- und Unterarm, Ober- und Unterschenkel, Unterarm und Hand, Unterschenkel und Fuß. Markiert ist jeweils ob die Datenpunkte Flügel haben (blau) oder nicht (rot).}
    \label{input_data_wings}
   \end{figure}
  
@@ -159,7 +159,7 @@ Notizen aus "`Über Wachstum und Form"' von D'Arcy Wentworth Thompson \cite{DArc
   \qquad
   \subfloat[logarithmische Skala]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results_with_wing_tag/input_weight_logarithmic.pdf}\label{gnuplot_log_weight}}
   
-  \caption{Erhobene Daten: Gewicht. Markiert ist jeweils ob die Datenpunkte Flügel haben oder nicht.}
+  \caption{Erhobene Daten: Gewicht. Markiert ist jeweils ob die Datenpunkte Flügel haben (blau) oder nicht (rot).}
   \label{input_data_weight_wings}
  \end{figure}
  
@@ -199,7 +199,7 @@ Notizen aus "`Über Wachstum und Form"' von D'Arcy Wentworth Thompson \cite{DArc
    \qquad
    \subfloat[Länge Unterschenkel und Fuß]{\includegraphics[width=0.3\textwidth]{../PCA/gnuplot/results_with_leg_tag/input_lowerLeg+foot.pdf}}
    
-   \caption{Erhobene Daten: Punkte der Bézierkurven der Wirbelsäule und Längen der Extremitäten. Bei den Extremitäten ist jeweils gegeneinander abgetragen Ober- und Unterarm, Ober- und Unterschenkel, Unterarm und Hand, Unterschenkel und Fuß. Markiert ist jeweils wieviele Beine die Datenpunkte haben.}
+   \caption{Erhobene Daten: Punkte der Bézierkurven der Wirbelsäule und Längen der Extremitäten. Bei den Extremitäten ist jeweils gegeneinander abgetragen Ober- und Unterarm, Ober- und Unterschenkel, Unterarm und Hand, Unterschenkel und Fuß. Markiert ist jeweils ob die Datenpunkte $0$ (rot), $2$ (blau) oder $4$ (grün) Beine haben.}
    \label{input_data_legs}
   \end{figure}
  
